--- a/solutions-mobile-backend-starter-android-client-master/AndroidManifest.xml
+++ b/solutions-mobile-backend-starter-android-client-master/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.google.cloud.backend"
+    package="com.codesdk.cloud.backend"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -18,7 +18,12 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher_guestbook"
@@ -29,7 +34,7 @@
             android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name="com.google.cloud.backend.sample.guestbook.GuestbookActivity"
+            android:name="com.codesdk.cloud.backend.sample.guestbook.GuestbookActivity"
             android:configChanges="orientation|screenSize"
             android:label="@string/app_name" >
             <intent-filter>
@@ -39,7 +44,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.google.cloud.backend.sample.guestbook.IntroductionActivity"
+            android:name="com.codesdk.cloud.backend.sample.guestbook.IntroductionActivity"
             android:screenOrientation="portrait" >
 
             <!-- If you use the Android SDK 15 or less, the attributes android:parentActivityName doesn't work -->
@@ -48,7 +53,7 @@
                 android:value="com.google.cloud.backend.sample.guestbook.GuestbookActivity" />
         </activity>
         <activity
-            android:name="com.google.cloud.backend.sample.guestbook.MapActivity"
+            android:name="com.codesdk.cloud.backend.sample.guestbook.MapActivity"
             android:screenOrientation="portrait" >
         </activity>
 
@@ -60,7 +65,7 @@
             android:name="com.google.cloud.backend.sample.socialtalk.SocialTalkActivity"
         -->
 
-        <service android:name="com.google.cloud.backend.GCMIntentService" />
+        <service android:name="com.codesdk.cloud.backend.GCMIntentService" />
 
         <receiver
             android:name="com.google.android.gcm.GCMBroadcastReceiver"
@@ -73,7 +78,11 @@
             </intent-filter>
         </receiver>
 
-        <service android:name="com.google.cloud.backend.GCMIntentService" />
+        <service android:name="com.codesdk.cloud.backend.GCMIntentService" />
+        <!-- Google Maps API Key -->
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="_" />
     </application>
 
 </manifest>
