--- a/solutions-mobile-backend-starter-android-client-master/AndroidManifest.xml
+++ b/solutions-mobile-backend-starter-android-client-master/AndroidManifest.xml
@@ -82,7 +82,7 @@
         <!-- Google Maps API Key -->
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="_" />
+            android:value="AIzaSyB4si1N7NVG41IWuqryQ34xxac3EXU5hUk" />
     </application>
 
 </manifest>
